# tess-asteroids

./: pyproject.toml
src/tess_asteroids/: __init__.py  asteroid.py  periodogram.py
tests/: test_tess_asteroids.py
