[tool.poetry]
name = "tess-asteroids"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.2"
black = "^21.5b1"
isort = "^5.8.0"
mkdocs = "^1.1.2"
mkdocs-material = "^7.1.5"
mkdocstrings = "^0.15.1"
pytkdocs = {version = "^0.11.1", extras = ["numpy-style"]}
jupyterlab = "^3.0.16"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
